[package]
name = "oxitrack"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}

serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
anyhow = "1.0.100"
