[package]
name = "oxitrack"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = {version = "1.48.0", features = ["full"]}
tower = { version = "0.4", features = ["full"] }
tower-http = {version = "0.6.8", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3.22"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
anyhow = "1.0.100"
dotenvy = "0.15.7"
